  standard data files for the "include" directive.  Initial contents:
  character entity substitution definition sets.

* docutils/writers/html4css1.py:

  - Added support for image width and height units.
  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.
  - Specifying either ``--stylesheet`` or ``--stylesheet-path`` is
    mandatory now.

* docutils/writers/docutils_xml.py:

  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.

* docutils/writers/null.py:

  - The Null Writer now returns an empty string instead of None.

* docs/dev/distributing.txt: Added to project; guide for distributors.

* docs/user/links.txt: Added to project; link list.

* docs/ref/rst/substitutions.txt: "reStructuredText Standard
  Substitution Definition Sets", added to project.

* test/coverage.sh: Added to project; test coverage script.

* tools/rstpep2html.py: Renamed from pep.py.

* tools/dev/profile_docutils.py: Added to project; profiler script.


Release 0.3.9 (2005-05-26)
==========================

* General:

  - Eliminated and replaced all uses of the old string attributes
    ``id``, ``name``, ``dupname`` and ``class`` with references to the
    new list attributes ``ids``, ``names``, ``dupnames`` and
    ``classes`` throughout the whole source tree.

* docutils/core.py:

  - Enabled ``--dump-*`` options when ``--traceback`` specified,
    allowing for easier debugging.

* docutils/examples.py:

  - Added ``internals`` function for exploration.

* docutils/io.py:

  - Fixed ``Input.decode`` method to apply heuristics only if no
    encoding is explicitly given, and to provide better reporting of
    decoding errors.
  - The ``Input.decode`` method now removes byte order marks (BOMs)
    from input streams.

* docutils/nodes.py:

  - ``image`` element class changed to subclass of Element, not
    TextElement (it's an empty element, and cannot contain text).
  - Added ``attr_defaults`` dictionary for default attribute values.